cmake_minimum_required(VERSION 3.23)
project(COMP_1410 C)

set(CMAKE_C_STANDARD 99)

add_executable(Sand SandBox.c)
add_executable(LAB2-3 LabWeek2-3.c)
add_executable(Acronym Acronym.c)
add_executable(Pointer TryingPointers.c)
add_executable(ADT ADT.c)
add_executable(LinkList LinkedList.c)
add_executable(FileParse fileParsing.c)
add_executable(grade AvgGradeFile.c)
add_executable(food parseFood.c)
add_executable(thes Thesaurus.c)
add_executable(Fibbonaci NthFib.c)
add_executable(PermNames PermNames.c)
add_executable(LLBasic LinkedListBasic.c)
add_executable(FinalPrac FinalExamPrac.c)
add_executable(FinalSol FinalExamSol.c)












